--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
-    "@angular/fire": "^20.0.1",
     "@angular/forms": "^20.3.0",
     "@angular/material": "^20.2.5",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@dataconnect/generated": "file:src/dataconnect-generated",
-    "firebase": "^11.10.0",
+    "bootstrap": "^5.3.8",
+    "firebase": "^12.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
